stylesheet: Do not prevent code/tt from wrapping text.

--- a/site-assets/style.css
+++ b/site-assets/style.css
@@ -17,10 +17,6 @@ code, pre, tt {
     font-family: Inconsolata, monospace;
 }
 
-code, tt {
-    white-space: nowrap;
-}
-
 a:link {
     text-decoration: none;
 }
